src/objects/enterprise_campaign__x.object
<CustomObject>
    <description>enterprise_campaign</description>
    <externalDataSource>CustomApexHerokuConnector</externalDataSource>
    <externalName>caesars$marketing_campaigns_enterprise</externalName>
    <fields>
        <fullName>contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>contact</description>
        <externalDeveloperName>contact</externalDeveloperName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Marketing Enterprise Campaigns</relationshipLabel>
        <relationshipName>Enterprise_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>f_actual_all_all_mkts__c</fullName>
        <description>f_actual_all_all_mkts</description>
        <externalDeveloperName>f_actual_all_all_mkts</externalDeveloperName>
        <label>Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_mdw_all_all_mkts__c</fullName>
        <description>f_mdw_all_all_mkts</description>
        <externalDeveloperName>f_mdw_all_all_mkts</externalDeveloperName>
        <label>MDW all</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_mdw_rated_all_mkts__c</fullName>
        <description>f_mdw_rated_all_mkts</description>
        <externalDeveloperName>f_mdw_rated_all_mkts</externalDeveloperName>
        <label>MDW Rated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_all_all_mkts__c</fullName>
        <description>f_theo_all_all_mkts</description>
        <externalDeveloperName>f_theo_all_all_mkts</externalDeveloperName>
        <label>Theo all</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_all_days_all_mkts__c</fullName>
        <description>i_all_days_all_mkts</description>
        <externalDeveloperName>i_all_days_all_mkts</externalDeveloperName>
        <label>All days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_cms_rated_trips_all_mkts__c</fullName>
        <description>i_cms_rated_trips_all_mkts</description>
        <externalDeveloperName>i_cms_rated_trips_all_mkts</externalDeveloperName>
        <label>CMS rated trips</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_dmid__c</fullName>
        <description>i_dmid</description>
        <externalDeveloperName>i_dmid</externalDeveloperName>
        <label>i_dmid</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_hotel_trips_all_mkts__c</fullName>
        <description>i_hotel_trips_all_mkts</description>
        <externalDeveloperName>i_hotel_trips_all_mkts</externalDeveloperName>
        <label>Hotel trips</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_minutes_all_mkts__c</fullName>
        <description>i_minutes_all_mkts</description>
        <externalDeveloperName>i_minutes_all_mkts</externalDeveloperName>
        <label>Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_offer_trips_all_mkts__c</fullName>
        <description>i_offer_trips_all_mkts</description>
        <externalDeveloperName>i_offer_trips_all_mkts</externalDeveloperName>
        <label>Offer trips</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_pdb_rated_trips_all_mkts__c</fullName>
        <description>i_pdb_rated_trips_all_mkts</description>
        <externalDeveloperName>i_pdb_rated_trips_all_mkts</externalDeveloperName>
        <label>PDB rated trips</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_pdb_trips_all_mkts__c</fullName>
        <description>i_pdb_trips_all_mkts</description>
        <externalDeveloperName>i_pdb_trips_all_mkts</externalDeveloperName>
        <label>PDB trips</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_rated_days_all_mkts__c</fullName>
        <description>i_rated_days_all_mkts</description>
        <externalDeveloperName>i_rated_days_all_mkts</externalDeveloperName>
        <label>Rated days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Marketing Enterprise Campaign</label>
    <pluralLabel>Marketing Enterprise Campaigns</pluralLabel>
</CustomObject>